--- a/index.html
+++ b/index.html
@@ -7,12 +7,101 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ab.93 portfolio</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquam exercitationem quidem ut facere eveniet enim, ex ipsam cum deserunt vel numquam consequatur fugiat culpa consequuntur officiis! Cum, ipsam nulla.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquam exercitationem quidem ut facere eveniet enim, ex ipsam cum deserunt vel numquam consequatur fugiat culpa consequuntur officiis! Cum, ipsam nulla.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquam exercitationem quidem ut facere eveniet enim, ex ipsam cum deserunt vel numquam consequatur fugiat culpa consequuntur officiis! Cum, ipsam nulla.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquam exercitationem quidem ut facere eveniet enim, ex ipsam cum deserunt vel numquam consequatur fugiat culpa consequuntur officiis! Cum, ipsam nulla.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquam exercitationem quidem ut facere eveniet enim, ex ipsam cum deserunt vel numquam consequatur fugiat culpa consequuntur officiis! Cum, ipsam nulla.</p>
+    
+     <!--NavBar-->
 
+  <nav class="navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Menu</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Contactpage.html">Socials/Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93?tab=repositories" >GitHub</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Projects
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="bootstrap.html">Bootstrap</a>
+            <a class="dropdown-item" href="React.html">React</a>
+            <a class="dropdown-item" href="#">Python (Coming soon)</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!--End NavBar-->
+
+
+
+
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm-4">
+        <h1>About section</h1>
+        <h3>Started coding around May 2022.</h3>
+        <p>(React mini projects)</p>
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link" href="#">React Chess</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">React Checkers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93/React-Tic-tac-Toe">React Tic Tac Toe</a>
+          </li>
+        </ul>
+        <hr class="d-sm-none">
+      </div>
+      <div class="col-sm-4">
+        <h4>Othen than Coding...</h4>
+        <h5>I like to...</h5>
+        <p>
+        <ul>
+          <li>Hang out with Friends and Family</li>
+          <li>Play Golf</li>
+          <li>Workout and Exercise</li>
+          <li>Watch Tv/Movies/Anime</li>
+          <li>Play Computer & Video games</li>
+          <li>Explore the Metaverse</li>
+        </ul>
+        </p>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="Images/face2.jpeg" alt="Face"/>
+          </div>
+          <div class="flip-card-back">
+            <h1>Brian</h1>
+            <p>28</p>
+            <p>San Mateo, California</p>
+            <p>Developer</p>
+            <p>HTML / CSS / JS</p>
+            <p>SCSS / Bootstrap / React</p>
+            <p>Python</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+   
 </body>
 </html>
