--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     crossorigin="anonymous"></script>
 
   <!--Portfolio JS sheet link-->
-  <script src="portfolio.js"></script>
+  <script src="portfoliojs.js"></script>
 
 
 </body>
