--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="styesheet" href="portfolio.css">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!--Portfolio CSS stylesheet link-->
+  <link rel="stylesheet" href="Portfolio.css">
+
+  <title>Achitect_B Portfolio</title>
 </head>
+
 <body>
-    
-     <!--NavBar-->
+
+
+
+  <!--NavBar-->
 
   <nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Menu</a>
@@ -102,6 +112,8 @@
     </div>
   </div>
 
+
+
   <!--JS effect-->
   <canvas id="nokey" width="800" height="800"></canvas>
 
@@ -120,7 +132,6 @@
   <!--Portfolio JS sheet link-->
   <script src="portfoliojs.js"></script>
 
-
 </body>
-</html>
 
+</html>
