--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Contactpage.html">Socials/Contact</a>
+          <a class="nav-link" href="Contact.html">Socials/Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93?tab=repositories" >GitHub</a>
