--- a/Contact.html
+++ b/Contact.html
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="Portfolio.html">About</a>
+          <a class="nav-link" href="index.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Socials/Contact<span class="sr-only">(current)</span></a>
