--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#">Socials/Contact<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93?tab=repositories">GitHub</a>
+          <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93">GitHub</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
