--- a/bootstrap.html
+++ b/bootstrap.html
@@ -48,6 +48,7 @@
                                 class="sr-only">(current)</span></a>
                         <a class="dropdown-item" href="React.html">React</a>
                         <a class="dropdown-item" href="#">Python (Coming soon)</a>
+                        <a class="dropdown-item" href="#">Crypto/Stock/FX</a>
                     </div>
                 </li>
             </ul>
