--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <a class="dropdown-item" href="bootstrap.html">Bootstrap</a>
             <a class="dropdown-item" href="React.html">React</a>
             <a class="dropdown-item" href="#">Python (Coming soon)</a>
+            <a class="dropdown-item" href="#">Crypto/Stock/FX</a>
           </div>
         </li>
       </ul>
