--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       <div class="col-sm-4">
         <h1>About section</h1>
         <h3>Started coding around May 2022.</h3>
-        <p>(React mini projects)</p>
+        Site best viewed
+        on Laptop(1024px) and up.
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
             <a class="nav-link" href="#">React Chess</a>
