--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="bootstrap.html">Bootstrap</a>
             <a class="dropdown-item" href="React.html">React</a>
-            <a class="dropdown-item" href="#">Python (Coming soon)</a>
+            <a class="dropdown-item" href="#">Python</a>
             <a class="dropdown-item" href="#">Crypto/Stock/FX</a>
           </div>
         </li>
