--- a/React.html
+++ b/React.html
@@ -46,7 +46,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="bootstrap.html">Bootstrap</a>
             <a class="dropdown-item" href="#">React <span class="sr-only">(current)</span></a>
-            <a class="dropdown-item" href="#">Python (Coming soon)</a>
+            <a class="dropdown-item" href="#">Python</a>
             <a class="dropdown-item" href="#">Crypto/Stock/FX</a>
           </div>
         </li>
