--- a/bootstrap.html
+++ b/bootstrap.html
@@ -47,7 +47,7 @@
                         <a class="dropdown-item" href="bootstrap.html" target="_blank" rel="noopener">Bootstrap<span
                                 class="sr-only">(current)</span></a>
                         <a class="dropdown-item" href="React.html">React</a>
-                        <a class="dropdown-item" href="#">Python (Coming soon)</a>
+                        <a class="dropdown-item" href="#">Python</a>
                         <a class="dropdown-item" href="#">Crypto/Stock/FX</a>
                     </div>
                 </li>
