--- a/Contact.html
+++ b/Contact.html
@@ -65,7 +65,7 @@
         rel="noopener">LinkedIn</a></li>
     <li><a href="https://twitter.com/" class="icon-twitter" target="_blank" rel="noopener">Twitter</a></li>
     <li><a href="https://www.facebook.com/" class="icon-facebook" target="_blank" rel="noopener">Facebook</a></li>
-    <li><a href="https://www.twitch.tv/architectb93" class="icon-twitch" target="_blank" rel="noopener">Twitch</a></li>
+    <li><a href="https://www.twitch.tv" class="icon-twitch" target="_blank" rel="noopener">Twitch</a></li>
     <li><a href="https://github.com/ArchitectB93" class="icon-github" target="_blank" rel="noopener">GitHub</a></li>
     <li><a href="https://pinterest.com" class="icon-pinterest" target="_blank" rel="noopener">Pinterest</a></li>
     <li><a href="https://instagram.com" class="icon-instagram" target="_blank" rel="noopener">Instagram</a></li>
@@ -77,7 +77,7 @@
         rel="noopener">LinkedIn</a></li>
     <li><a href="https://twitter.com/" class="icon-twitter" target="_blank" rel="noopener">Twitter</a></li>
     <li><a href="https://www.facebook.com/" class="icon-facebook" target="_blank" rel="noopener">Facebook</a></li>
-    <li><a href="https://www.twitch.tv/architectb93" class="icon-twitch" target="_blank" rel="noopener">Twitch</a></li>
+    <li><a href="https://www.twitch.tv" class="icon-twitch" target="_blank" rel="noopener">Twitch</a></li>
     <li><a href="https://github.com/ArchitectB93" class="icon-github" target="_blank" rel="noopener">GitHub</a></li>
     <li><a href="https://pinterest.com" class="icon-pinterest" target="_blank" rel="noopener">Pinterest</a></li>
     <li><a href="https://instagram.com" class="icon-instagram" target="_blank" rel="noopener">Instagram</a></li>
@@ -89,7 +89,7 @@
         rel="noopener">LinkedIn</a></li>
     <li><a href="https://twitter.com/" class="icon-twitter" target="_blank" rel="noopener">Twitter</a></li>
     <li><a href="https://www.facebook.com/" class="icon-facebook" target="_blank" rel="noopener">Facebook</a></li>
-    <li><a href="https://www.twitch.tv/architectb93" class="icon-twitch" target="_blank" rel="noopener">Twitch</a></li>
+    <li><a href="https://www.twitch.tv" class="icon-twitch" target="_blank" rel="noopener">Twitch</a></li>
     <li><a href="https://github.com/ArchitectB93" class="icon-github" target="_blank" rel="noopener">GitHub</a></li>
     <li><a href="https://pinterest.com" class="icon-pinterest" target="_blank" rel="noopener">Pinterest</a></li>
     <li><a href="https://instagram.com" class="icon-instagram" target="_blank" rel="noopener">Instagram</a></li>
