--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="Contact.html">Socials/Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93" >GitHub</a>
+          <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93">GitHub</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
@@ -68,13 +68,8 @@
         <h3>Started coding around May 2022.</h3>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
-            <a class="nav-link" href="#">React Chess</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">React Checkers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" rel="noopener" target="_blank" href="https://github.com/ArchitectB93/React-Tic-tac-Toe">React Tic Tac Toe</a>
+            <a class="nav-link" rel="noopener" target="_blank"
+              href="https://github.com/ArchitectB93/React-Tic-tac-Toe">React Tic Tac Toe</a>
           </li>
         </ul>
         <hr class="d-sm-none">
@@ -96,7 +91,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="Images/face2.jpeg" alt="Face"/>
+            <img src="Images/face2.jpeg" alt="Face" />
           </div>
           <div class="flip-card-back">
             <h1>Brian</h1>
@@ -133,5 +128,3 @@
   <script src="portfoliojs.js"></script>
 
 </body>
-
-
