--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   </header>
   <section class="container">
 
-    <img src="/Images/face2.jpeg" width="300px" height="350px" style="margin-left: 30%; border: 5px solid #555;" alt="face">
+    <img src="face2.jpeg" width="300px" height="350px" style="margin-left: 30%; border: 5px solid #555;" alt="face">
     <p>
       Hello my name is Brian DuBois. I am 29 years old and currently living in California.
       Other than coding I like to hangout with friends & family, play golf, indulge delicious foods, explore the
