--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
       possible.
     </p>
     <p>
-      Languages I know: <img src="/Images/htmlicon.png" alt="html">HTML / <img src="/Images/cssicon.png" alt="css">CSS / <img
-        src="/Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="/Images/jsicon.png" alt="javascript">Javascript / <img
-        src="/Images/reacticon.png" alt="react">React / <img src="/Images/pyicon.png" alt="python">Python
+      Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS / <img
+        src="Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="Images/jsicon.png" alt="javascript">Javascript / <img
+        src="Images/reacticon.png" alt="react">React / <img src="Images/pyicon.png" alt="python">Python
     </p>
     <br>
     <div class="box"><a href="project.html" style="color: white;">Projects</a></div>
