--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
     <img src="face4.jpeg" width="300px" height="350px" style="margin-left: 30%; border: 5px solid #555;" alt="face">
     <p>
-      Hello my name is Brian. I am 29 years old web developer currently living in California. 
+      Hello my name is Brian. I am 29 years old front end web developer currently living in California. 
       Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
       metaverse and play computer/videogames.
     </p>
