--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <p>
       Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS / <img
         src="Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="Images/jsicon.png" alt="javascript">Javascript / <img
-        src="Images/reacticon.png" alt="react">React / <img src="Images/pyicon.png" alt="python">Python
+        src="Images/reacticon.png" alt="react">React 
     </p>
     <br>
     <div class="box"><a href="project.html" style="color: white;">Projects</a></div>
