--- a/project.html
+++ b/project.html
@@ -29,7 +29,8 @@
   <h2>API work</h2>
   <div id="game">
   <a href="weather.html" target="_blank"><button class="custom-btn btn-2"><span>Weather App</span></button></a>
-  <a href="country.html" target="_blank"><button class="custom-btn btn-5"><span>Country Finder</span></button></a>
+  <a href="country.html" target="_blank"><button class="custom-btn btn-6"><span>Country Finder</span></button></a>
+  <a href="card.html" target="_blank"><button class="custom-btn btn-7"><span>Pokemon Card</span></button></a>
   </div>
   </section>
 </body>
