--- a/about.html
+++ b/about.html
@@ -18,22 +18,25 @@
   </header>
   <section class="container">
 
-    <img src="face4.jpeg" width="300px" height="350px" style="margin-left: 30%; border: 5px solid #555;" alt="face">
+    <img src="face4.jpeg" width="300px" height="350px" style="margin-left: 30%; border: 5px solid #555;" alt="face" class="responsive">
     <p>
-      Hello my name is Brian. I am 29 years old front end web developer currently living in California. 
+      Hello my name is Brian. I am 29 years old front end web developer currently living in California.
       Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
       metaverse and play computer/videogames.
     </p>
     <p>
-      I started coding around February 2022 because I noticed the world becoming more digital so I figured learning
-      how to code would be a good idea.
-      Being able to create websites / games / apps / etc. is also really fun and intriguing to me with what is becoming
+      I started learning code around February 2022 because I noticed the world becoming more digital so I figured learning
+      how to code and develope would be a good idea.
+      <br>
+      <br>
+      Being able to solve problems, and create websites / games / apps / etc. is also really fun and intriguing to me
+      with what is becoming
       possible.
     </p>
     <p>
-      Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS / <img
-        src="Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="Images/jsicon.png" alt="javascript">Javascript / <img
-        src="Images/reacticon.png" alt="react">React 
+      Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS /
+      <img src="Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="Images/jsicon.png" alt="javascript">Javascript
+      / <img src="Images/reacticon.png" alt="react">React
     </p>
     <br>
     <div class="box"><a href="project.html" style="color: white;">Projects</a></div>
