--- a/about.html
+++ b/about.html
@@ -17,10 +17,12 @@
   <header id="banner" class="banner">
   </header>
   <section class="container">
-
-    <img src="face4.jpeg" width="300px" height="350px" style="margin-left: 30%; border: 5px solid #555;" alt="face" class="responsive">
+    <div>
+      <img src="face4.jpeg" width="300px" height="350px" style="margin-right: 5%; margin-left: 10%; border: 5px solid #555; float: left;" alt="face" class="responsive">
+    </div>
+    
     <p>
-      Hello my name is Brian. I am 29 years old front end web developer currently living in California.
+      Hello my name is Brian. I am a 29 years old Web developer currently living in California.
       Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
       metaverse and play computer/videogames.
     </p>
@@ -37,13 +39,20 @@
       Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS /
       <img src="Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="Images/jsicon.png" alt="javascript">Javascript
       / <img src="Images/reacticon.png" alt="react">React
+      <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
+        <li>Refine React & API skills</li>
+        <li>Start learning backend/MYsql & Python</li> 
+        <li>Apply for/land a developer job</li>
+      </ul>
     </p>
     <br>
-    <div class="box"><a href="project.html" style="color: white;">Projects</a></div>
+      <div class="box"><a href="project.html" style="color: white;">Projects</a></div>
     <br>
+    <div style="position: relative; left: 10%;">
     <a href="https://www.linkedin.com/in/architectb/" class="fa fa-linkedin" target="_blank" rel="noopener"></a>
     <a href="https://github.com/ArchitectB93" class="fa fa-github" target="_blank" rel="noopener"></a>
     <p>Email: architectb93@gmail.com</p>
+    </div>
   </section>
 
 
