--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
     </p>
     <p>
       Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS /
-      <img src="Images/bsicon.png" alt="bootstrap">Bootstrap / <img src="Images/jsicon.png" alt="javascript">Javascript
+      <img src="Images/bsicon.png" alt="bootstrap">Bootstrap  <img src="Images/jsicon.png" alt="javascript">Javascript
       / <img src="Images/reacticon.png" alt="react">React
       <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
         <li>Refine React & API skills</li>
-        <li>Start learning backend/MYsql & Python</li> 
-        <li>Apply for/land a developer job</li>
+        <li>Study backend/MySQL & Python</li> 
+        <li>Land a developer job</li>
       </ul>
     </p>
     <br>
