--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </div>
     
     <p>
-      Hello my name is Brian. I am a 29 years old Web developer currently living in California.
+      Hello my name is Brian. I am a 29 year old Web developer currently living in California.
       Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
       metaverse and play computer/videogames.
     </p>
