--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       / <img src="Images/reacticon.png" alt="react">React
       <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
         <li>Refine React & API skills</li>
-        <li>Study backend/MySQL & Python</li> 
+        <li>Go full stack & study backend/MySQL & Python</li> 
         <li>Land a developer job</li>
       </ul>
     </p>
