--- a/about.html
+++ b/about.html
@@ -40,9 +40,10 @@
       <img src="Images/bsicon.png" alt="bootstrap">Bootstrap  <img src="Images/jsicon.png" alt="javascript">Javascript
       / <img src="Images/reacticon.png" alt="react">React
       <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
-        <li>Refine React & API skills</li>
-        <li>Go full stack & study backend/MySQL & Python</li> 
-        <li>Land a developer job</li>
+        <li>Refine React skills</li>
+        <li>Backend development</li> 
+        <li>Create a E-commerce store</li>
+        <li>Try and land a developer job</li>
       </ul>
     </p>
     <br>
