--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div id="enter">
         <h1>Welcome.</h1>
-        <h5><a href="about.html">Enter here.</a></h5>
+        <h5><a href="about.html"">Enter here.</a></h5>
         </div>
     </div>
 
