--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   </header>
   <section class="container">
     <div>
-      <img src="face4.jpeg" width="300px" height="350px" style="margin-right: 5%; margin-left: 10%; border: 5px solid #555; float: left;" alt="face" class="responsive">
+      <img src="face4.jpeg" width="300px" height="350px" alt="face" id="face">
     </div>
     
     <p>
@@ -41,9 +41,9 @@
       / <img src="Images/reacticon.png" alt="react">React
       <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
         <li>Refine React skills</li>
-        <li>Backend development</li> 
-        <li>Create a E-commerce store</li>
-        <li>Try and land a developer job</li>
+        <li>Python & Backend development</li> 
+        <li>Create a E-commerce store (start of a everything app)</li>
+        <li>Land a developer job</li>
       </ul>
     </p>
     <br>
