--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <body>
     <div class="container">
         <div id="enter">
-        <h1>Welcome.</h1>
-        <h5><a href="about.html"">Enter here.</a></h5>
+        <button data-text="Awesome" class="button" onclick="document.location='./about.html'">
+            <span class="actual-text">&nbsp;Enter&nbsp;</span>
+            <span class="hover-text" aria-hidden="true">&nbsp;Enter&nbsp;</span>
+        </button>
         </div>
     </div>
 
