--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
       <img src="Images/bsicon.png" alt="bootstrap">Bootstrap  <img src="Images/jsicon.png" alt="javascript">Javascript
       / <img src="Images/reacticon.png" alt="react">React
       <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
-        <li>Refine React skills</li>
-        <li>Python & Backend development</li> 
+        <li>Refine React skills & learn Typescript</li>
+        <li>Backend development</li> 
         <li>Create a E-commerce store (start of a everything app)</li>
         <li>Land a developer job</li>
       </ul>
