--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
   <section>
     <div id="page">
       <a href="about.html"><button class="custom-btn btn-12"><span>Home</span><span>Home</span></button></a>
-      <a href="type.html"><button class="custom-btn btn-12"><span>Typescript</span><span>Typescript</span></button></a>
+      <a href="#"><button class="custom-btn btn-12"><span>Typescript</span><span>Typescript</span></button></a>
       <a href="#"><button class="custom-btn btn-12"><span>React</span><span>React</span></button></a>
       <a href="#"><button class="custom-btn btn-12"><span>React & TS</span><span>React & TS</span></button></a>
     </div>
