--- a/about.html
+++ b/about.html
@@ -36,16 +36,16 @@
       possible.
     </p>
     <p>
-      Languages I know: <img src="Images/htmlicon.png" alt="html">HTML / <img src="Images/cssicon.png" alt="css">CSS /
-      <img src="Images/bsicon.png" alt="bootstrap">Bootstrap  <img src="Images/jsicon.png" alt="javascript">Javascript
-      / <img src="Images/reacticon.png" alt="react">React
+      Languages I know: HTML / CSS / JS / Bootstrap / React / Git
       <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
-        <li>Refine React skills & learn Typescript</li>
-        <li>Backend development</li> 
-        <li>Create a E-commerce store (start of a everything app)</li>
+        <li>Typescript</li>
+        <li>Backend development</li>
+        <li>Pinescript</li> 
+        <li>Create a E-commerce store</li>
         <li>Land a developer job</li>
       </ul>
     </p>
+    <br/>
     <br>
       <div class="box"><a href="project.html" style="color: white;">Projects</a></div>
     <br>
