--- a/project.html
+++ b/project.html
@@ -11,11 +11,9 @@
 
 <body>
   <section>
-    <div id="page">
+    <div id="page" style="margin-left: 35%;">
       <a href="about.html"><button class="custom-btn btn-12"><span>Home</span><span>Home</span></button></a>
-      <a href="#"><button class="custom-btn btn-12"><span>Typescript</span><span>Typescript</span></button></a>
       <a href="#"><button class="custom-btn btn-12"><span>React</span><span>React</span></button></a>
-      <a href="#"><button class="custom-btn btn-12"><span>React & TS</span><span>React & TS</span></button></a>
     </div>
     <br/>
     <h2>Games</h2>
