--- a/about.html
+++ b/about.html
@@ -37,10 +37,9 @@
     </p>
     <p>
       Languages I know: HTML / CSS / JS / Bootstrap / React / Git
-      <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus:</a>
-        <li>Typescript</li>
-        <li>Pinescript</li>
+      <ul style="color: black; position: absolute; left: 50%;"><a style="font-size: 20px;">2023 focus (slowly updated):</a>
         <li>Backend development</li>
+        <li>Python / Pinescript</li>
         <li>Create a E-commerce store</li>
         <li>Land a developer job</li>
       </ul>
