--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
   <section>
     <div id="page" style="margin-left: 35%;">
       <a href="about.html"><button class="custom-btn btn-12"><span>Home</span><span>Home</span></button></a>
-      <a href="https://architectb93.github.io/rport/"><button class="custom-btn btn-12"><span>React</span><span>React</span></button></a>
+      <a href="https://architectb93.github.io/"><button class="custom-btn btn-12"><span>React</span><span>React</span></button></a>
     </div>
     <br/>
     <h2>Games</h2>
