--- a/project.html
+++ b/project.html
@@ -11,9 +11,11 @@
 
 <body>
   <section>
-    <div id="page" style="margin-left: 35%;">
+    <div style="position:relative; left: 401px; ">
       <a href="about.html"><button class="custom-btn btn-12"><span>Home</span><span>Home</span></button></a>
-      <a href="https://architectb93.github.io/rport/"><button class="custom-btn btn-12"><span>React</span><span>React</span></button></a>
+      <a href="https://architectb93.github.io/rport/"><button class="custom-btn btn-12"><span>Projects</span><span>React</span></button></a>
+      <a href="#"><button class="custom-btn btn-12"><span>Projects</span><span>Backend</span></button></a>
+
     </div>
     <br/>
     <h2>Games</h2>
