--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
     <div style="position:relative; left: 401px; ">
       <a href="about.html"><button class="custom-btn btn-12"><span>Home</span><span>Home</span></button></a>
       <a href="https://architectb93.github.io/rport/"><button class="custom-btn btn-12"><span>Projects</span><span>React</span></button></a>
-      <a href="#"><button class="custom-btn btn-12"><span>Projects</span><span>Backend</span></button></a>
+      <a href="#"><button class="custom-btn btn-12"><span>Page</span><span>Backend</span></button></a>
 
     </div>
     <br/>
