--- a/project.html
+++ b/project.html
@@ -11,10 +11,10 @@
 
 <body>
   <section>
-    <div style="position:relative; left: 401px; ">
+    <div id="game">
       <a href="about.html"><button class="custom-btn btn-12"><span>Home</span><span>Home</span></button></a>
       <a href="https://architectb93.github.io/rport/"><button class="custom-btn btn-12"><span>Page</span><span>React</span></button></a>
-      <a href="#"><button class="custom-btn btn-12"><span>Projects</span><span>Backend</span></button></a>
+      <a href="https://www.freecodecamp.org/certification/Architect_B/back-end-development-and-apis" target="_blank" ><button class="custom-btn btn-12"><span>Projects</span><span>Backend</span></button></a>
 
     </div>
     <br/>
