--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 				<li class="nav__list-item active-nav"><a href="#" class="hover-target">About</a></li>
 				<li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
 				<li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
-				<li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" class="hover-target">Contact</a></li>
+				<li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank" class="hover-target">Contact</a></li>
 			</ul>
 		</div>
 	</div>		
