about page change

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
 			<ul class="nav__list">
 				<li class="nav__list-item active-nav"><a href="#" class="hover-target">About</a></li>
 				<li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
+        <li class="nav__list-item active-nav"><a href="#" class="hover-target">Websites</a></li>
 				<li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
 				<li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank" class="hover-target">Contact</a></li>
 			</ul>
@@ -48,11 +49,13 @@
 			</div>
 			<p><span>dark</span> - <span>light</span></p>
 		</div>
+    <div style="max-width: 100px; max-height: 100px;">
+      <img src="face4.jpeg" alt="face">
+    </div>
 	</div>	
 
-  <div style="max-width: 300px; max-height: 300px;">
-    <img src="face4.jpeg" alt="face">
-  </div>
+    
+  
 
 
   <div class='cursor' id="cursor"></div>
