--- a/about.html
+++ b/about.html
@@ -49,7 +49,17 @@
 			</div>
 			<p><span>dark</span> - <span>light</span></p>
 		</div>
-    <div style="max-width: 100px; max-height: 100px;">
+    <div style=
+    "max-width: 200px; 
+    max-height: 200px; 
+    position: relative; 
+    top: 40%; 
+    left: 25%;
+    box-shadow: 10px 10px 5px #ccc;
+      -moz-box-shadow: 10px 10px 5px #ccc;
+      -webkit-box-shadow: 10px 10px 5px #ccc;
+      -khtml-box-shadow: 10px 10px 5px #ccc;
+    ">
       <img src="face4.jpeg" alt="face">
     </div>
 	</div>	
