--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 	<div class="nav">
 		<div class="nav__content">
 			<ul class="nav__list">
-				<li class="nav__list-item active-nav"><a href="#" class="hover-target">About</a></li>
+				<li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
 				<li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
-        <li class="nav__list-item active-nav"><a href="#" class="hover-target">Websites</a></li>
+        <li class="nav__list-item"><a href="#" class="hover-target">Websites</a></li>
 				<li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
 				<li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank" class="hover-target">Contact</a></li>
 			</ul>
