about page changes

--- a/about.html
+++ b/about.html
@@ -15,64 +15,75 @@
 
 <body>
   <header class="cd-header">
-		<div class="header-wrapper">
-			<div class="logo-wrap">
-				<a href="#" class="hover-target"><span>Brian </span>D.</a>
-			</div>
-			<div class="nav-but-wrap">
-				<div class="menu-icon hover-target">
-					<span class="menu-icon__line menu-icon__line-left"></span>
-					<span class="menu-icon__line"></span>
-					<span class="menu-icon__line menu-icon__line-right"></span>
-				</div>					
-			</div>					
-		</div>				
-	</header>
+    <div class="header-wrapper">
+      <div class="logo-wrap">
+        <a href="#" class="hover-target"><span>Brian </span>D.</a>
+      </div>
+      <div class="nav-but-wrap">
+        <div class="menu-icon hover-target">
+          <span class="menu-icon__line menu-icon__line-left"></span>
+          <span class="menu-icon__line"></span>
+          <span class="menu-icon__line menu-icon__line-right"></span>
+        </div>
+      </div>
+    </div>
+  </header>
 
-	<div class="nav">
-		<div class="nav__content">
-			<ul class="nav__list">
-				<li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
-				<li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
+  <div class="nav">
+    <div class="nav__content">
+      <ul class="nav__list">
+        <li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
+        <li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
         <li class="nav__list-item"><a href="#" class="hover-target">Websites</a></li>
-				<li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
-				<li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank" class="hover-target">Contact</a></li>
-			</ul>
-		</div>
-	</div>		
+        <li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
+        <li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank"
+            class="hover-target">Contact</a></li>
+      </ul>
+    </div>
+  </div>
 
-	<div class="section full-height over-hide">	
-		<div class="switch-wrap">
-			<h1>About Me</h1>
-			<div id="switch" class="hover-target">
-				<div id="circle"></div>
-			</div>
-			<p><span>dark</span> - <span>light</span></p>
-		</div>
-    <div style=
-    "max-width: 200px; 
+  <div class="section full-height over-hide">
+    <div class="switch-wrap">
+      <h1>About Me</h1>
+      <div id="switch" class="hover-target">
+        <div id="circle"></div>
+      </div>
+      <p><span>dark</span> - <span>light</span></p>
+    </div>
+
+    <div style="max-width: 200px; 
     max-height: 200px; 
     position: relative; 
-    top: 40%; 
-    left: 25%;
-    box-shadow: 10px 10px 5px #ccc;
-      -moz-box-shadow: 10px 10px 5px #ccc;
-      -webkit-box-shadow: 10px 10px 5px #ccc;
-      -khtml-box-shadow: 10px 10px 5px #ccc;
+    top: 33%; 
+    left: 20%; 
+    align-items: center;
+    justify-content: center;
     ">
-      <img src="face4.jpeg" alt="face">
+      <div style="float: right;">
+        <img src="face4.jpeg" alt="face" style=" 
+      box-shadow: 10px 10px 5px #ccc;
+     -moz-box-shadow: 10px 10px 5px #ccc;
+     -webkit-box-shadow: 10px 10px 5px #ccc;
+     -khtml-box-shadow: 10px 10px 5px #ccc;
+     ">
+      </div>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius ut alias at modi pariatur. Id,
+          molestias omnis. Tenetur repudiandae non veritatis facere in molestias mollitia beatae modi dignissimos
+          dolorum.
+        </p>
+      </div>
     </div>
-	</div>	
-
-    
-  
 
 
-  <div class='cursor' id="cursor"></div>
-	<div class='cursor2' id="cursor2"></div>
-	<div class='cursor3' id="cursor3"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="about.js"></script>
+
+
+
+    <div class='cursor' id="cursor"></div>
+    <div class='cursor2' id="cursor2"></div>
+    <div class='cursor3' id="cursor3"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="about.js"></script>
 </body>
 
 </html>
