--- a/about.html
+++ b/about.html
@@ -59,20 +59,14 @@
     align-items: center;
     justify-content: center;
     ">
-      <div style="float: right;">
-        <img src="face4.jpeg" alt="face" style=" 
+      <img src="face4.jpeg" alt="face" style=" 
       box-shadow: 10px 10px 5px #ccc;
      -moz-box-shadow: 10px 10px 5px #ccc;
      -webkit-box-shadow: 10px 10px 5px #ccc;
      -khtml-box-shadow: 10px 10px 5px #ccc;
+     width: 100%;
+     height: auto;
      ">
-      </div>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius ut alias at modi pariatur. Id,
-          molestias omnis. Tenetur repudiandae non veritatis facere in molestias mollitia beatae modi dignissimos
-          dolorum.
-        </p>
-      </div>
     </div>
 
 
