--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="section full-height over-hide">
+  <div class="section full-height over-hide" style="align-items: center; justify-content: center;">
     <div class="switch-wrap">
       <h1>About Me</h1>
       <div id="switch" class="hover-target">
@@ -51,13 +51,13 @@
       <p><span>dark</span> - <span>light</span></p>
     </div>
 
-    <div style="max-width: 200px; 
+
+    <div style="
+    max-width: 200px; 
     max-height: 200px; 
     position: relative; 
-    top: 33%; 
-    left: 20%; 
-    align-items: center;
-    justify-content: center;
+    top: 40%; 
+    left: 15%; 
     ">
       <img src="face4.jpeg" alt="face" style=" 
       box-shadow: 10px 10px 5px #ccc;
@@ -66,18 +66,31 @@
      -khtml-box-shadow: 10px 10px 5px #ccc;
      width: 100%;
      height: auto;
+     float: left;
      ">
     </div>
+    <div style="
+    position: relative;
+    top: 39%;
+    float: left;
+    max-width: 200px;
+    font-size: 15px;
+    left: 20%;
+    ">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nihil eveniet sunt sint, recusandae pariatur
+        magnam omnis impedit! Ratione dolorum repudiandae laborum labore accusantium assumenda odio quis explicabo culpa
+        fuga.</p>
+    </div>
+  </div>
 
 
 
 
-
-    <div class='cursor' id="cursor"></div>
-    <div class='cursor2' id="cursor2"></div>
-    <div class='cursor3' id="cursor3"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="about.js"></script>
+  <div class='cursor' id="cursor"></div>
+  <div class='cursor2' id="cursor2"></div>
+  <div class='cursor3' id="cursor3"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="about.js"></script>
 </body>
 
 </html>
