--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     max-width: 200px; 
     max-height: 200px; 
     position: relative; 
-    top: 40%; 
+    top: 39%; 
     left: 15%; 
     ">
       <img src="face4.jpeg" alt="face" style=" 
@@ -71,16 +71,53 @@
     </div>
     <div style="
     position: relative;
-    top: 39%;
+    top: 38%;
     float: left;
     max-width: 200px;
     font-size: 15px;
     left: 20%;
+    color: #BCB3B3;
     ">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nihil eveniet sunt sint, recusandae pariatur
-        magnam omnis impedit! Ratione dolorum repudiandae laborum labore accusantium assumenda odio quis explicabo culpa
-        fuga.</p>
+      <p>Hello my name is Brian. I am a 29 year old Web developer currently living in California.
+        Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
+        metaverse and play computer / videogames.</p>
     </div>
+
+    <div style="
+    position: relative;
+    top: 38%;
+    float: left;
+    max-width: 200px;
+    font-size: 15px;
+    left: 22%;
+    color: #BCB3B3;
+    ">
+      <p>I started learning code around February 2022 because I noticed the world becoming more digital so I figured
+        learning
+        how to code and develope would be a good idea.
+        Being able to solve problems, and create websites / games / apps / etc. is also really fun and intriguing to me
+        with what is becoming
+        possible.</p>
+    </div>
+
+    <div style="
+    position: relative;
+    top: 38%;
+    float: left;
+    max-width: 200px;
+    font-size: 15px;
+    left: 22%;
+    color: #BCB3B3;
+    ">
+      <p>Languages I know: HTML / CSS / JS / Bootstrap / React / Git / Python</p>
+      <ul>2023 focus: (slowly updated)
+        <li>Backend development</li>
+        <li>Python / Pinescript</li>
+        <li>Create a E-commerce store</li>
+        <li>Land a developer job</li>
+      </ul>
+    </div>
+
   </div>
 
 
