--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
         <li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
         <li class="nav__list-item"><a href="#" class="hover-target">Websites</a></li>
-        <li class="nav__list-item"><a href="#" class="hover-target">News</a></li>
+        <li class="nav__list-item"><a href="https://github.com/ArchitectB93" class="hover-target">Github</a></li>
         <li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank"
             class="hover-target">Contact</a></li>
       </ul>
@@ -111,7 +111,6 @@
     ">
       <p>Languages I know: HTML / CSS / JS / Bootstrap / React / Git / Python</p>
       <ul>2023 focus: (slowly updated)
-        <li>Backend development</li>
         <li>Python / Pinescript</li>
         <li>Create a E-commerce store</li>
         <li>Land a developer job</li>
