--- a/about.html
+++ b/about.html
@@ -60,10 +60,10 @@
     left: 15%; 
     ">
       <img src="face4.jpeg" alt="face" style=" 
-      box-shadow: 10px 10px 5px #ccc;
-     -moz-box-shadow: 10px 10px 5px #ccc;
-     -webkit-box-shadow: 10px 10px 5px #ccc;
-     -khtml-box-shadow: 10px 10px 5px #ccc;
+      box-shadow: 10px 10px 5px #BCB3B3;
+     -moz-box-shadow: 10px 10px 5px #BCB3B3;
+     -webkit-box-shadow: 10px 10px 5px #BCB3B3;
+     -khtml-box-shadow: 10px 10px 5px #BCB3B3;
      width: 100%;
      height: auto;
      float: left;
