--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
         <li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
         <li class="nav__list-item"><a href="#" class="hover-target">Websites</a></li>
-        <li class="nav__list-item"><a href="https://github.com/ArchitectB93" class="hover-target">Github</a></li>
+        <li class="nav__list-item"><a href="https://github.com/ArchitectB93" class="hover-target" target="_blank">Github</a></li>
         <li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank"
             class="hover-target">Contact</a></li>
       </ul>
@@ -56,7 +56,7 @@
     max-width: 200px; 
     max-height: 200px; 
     position: relative; 
-    top: 39%; 
+    top: 38%; 
     left: 15%; 
     ">
       <img src="face4.jpeg" alt="face" style=" 
