About page -> Index

--- a/index.html
+++ b/index.html
@@ -2,37 +2,132 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Brian.D Portfolio</title>
-
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <div id="enter">
-        <button data-text="Awesome" class="button" onclick="document.location='./about.html'">
-            <span class="actual-text">&nbsp;Enter&nbsp;</span>
-            <span class="hover-text" aria-hidden="true">&nbsp;Enter&nbsp;</span>
-        </button>
+  <header class="cd-header">
+    <div class="header-wrapper">
+      <div class="logo-wrap">
+        <a href="#" class="hover-target"><span>Brian </span>D.</a>
+      </div>
+      <div class="nav-but-wrap">
+        <div class="menu-icon hover-target">
+          <span class="menu-icon__line menu-icon__line-left"></span>
+          <span class="menu-icon__line"></span>
+          <span class="menu-icon__line menu-icon__line-right"></span>
         </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="nav">
+    <div class="nav__content">
+      <ul class="nav__list">
+        <li class="nav__list-item"><a href="#" class="hover-target">About</a></li>
+        <li class="nav__list-item"><a href="project.html" class="hover-target">Projects</a></li>
+        <li class="nav__list-item"><a href="#" class="hover-target">Websites</a></li>
+        <li class="nav__list-item"><a href="https://github.com/ArchitectB93" class="hover-target"
+            target="_blank">Github</a></li>
+        <li class="nav__list-item"><a href="https://www.linkedin.com/in/architectb/" target="_blank"
+            class="hover-target">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="section full-height over-hide" style="align-items: center; justify-content: center;">
+    <div class="switch-wrap">
+      <h1>About Me</h1>
+      <div id="switch" class="hover-target">
+        <div id="circle"></div>
+      </div>
+      <p><span>dark</span> - <span>light</span></p>
     </div>
 
-    <canvas id="nokey" width="800" height="800"></canvas>
-    <script src="index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+
+    <div style="
+    max-width: 200px; 
+    max-height: 200px; 
+    position: relative; 
+    top: 38%; 
+    left: 15%; 
+    ">
+      <img src="face4.jpeg" alt="face" style=" 
+      box-shadow: 10px 10px 5px #BCB3B3;
+     -moz-box-shadow: 10px 10px 5px #BCB3B3;
+     -webkit-box-shadow: 10px 10px 5px #BCB3B3;
+     -khtml-box-shadow: 10px 10px 5px #BCB3B3;
+     width: 100%;
+     height: auto;
+     float: left;
+     ">
+    </div>
+    <div style="
+    position: relative;
+    top: 38%;
+    float: left;
+    max-width: 200px;
+    font-size: 15px;
+    left: 20%;
+    color: #BCB3B3;
+    ">
+      <p>Hello my name is Brian. I am a 29 year old Web developer currently living in California.
+        Other than coding I like to hangout with friends & family, play golf, indulge in delicious foods, explore the
+        metaverse and play computer / videogames.</p>
+    </div>
+
+    <div style="
+    position: relative;
+    top: 38%;
+    float: left;
+    max-width: 200px;
+    font-size: 15px;
+    left: 22%;
+    color: #BCB3B3;
+    ">
+      <p>I started learning code around February 2022 because I noticed the world becoming more digital so I figured
+        learning
+        how to code and develope would be a good idea.
+        Being able to solve problems, and create websites / games / apps / etc. is also really fun and intriguing to me
+        with what is becoming
+        possible.</p>
+    </div>
+
+    <div style="
+    position: relative;
+    top: 38%;
+    float: left;
+    max-width: 200px;
+    font-size: 15px;
+    left: 22%;
+    color: #BCB3B3;
+    ">
+      <p>Languages I know: HTML / CSS / JS / Bootstrap / React / Git / Python</p>
+      <ul>2023 focus: (slowly updated)
+        <li>Python / Pinescript</li>
+        <li>Create a E-commerce store</li>
+        <li>Land a developer job</li>
+      </ul>
+    </div>
+
+  </div>
+
+
+
+
+  <div class='cursor' id="cursor"></div>
+  <div class='cursor2' id="cursor2"></div>
+  <div class='cursor3' id="cursor3"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
